HPCC4J-582 Upgrade to Java 17
- Refactor code around deprecated Java features
- Update dependencies for Java 17
- Update pom files for Java 17

Signed-off-by: James McMullan James.McMullan@lexisnexis.com